--- a/CourseMate/appsettings.json
+++ b/CourseMate/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=tahsin-tajware\\sqlexpress;Database=CourseMate-Server;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "Default": "Host=dpg-d2k9rlm3jp1c7380k5l0-a.oregon-postgres.render.com;Port=5432;Database=coursemate_asp;Username=coursemate_asp_user;Password=d4bs4u3goNMe94gmb5xrppIspy3WR9Jo;SSL Mode=Require;Trust Server Certificate=true"
   },
+
   "AllowedHosts": "*",
   "EmailSettings": {
     "From": "tahsintajware12345@gmail.com",
