--- a/CourseMate/appsettings.json
+++ b/CourseMate/appsettings.json
@@ -11,10 +11,10 @@
 
   "AllowedHosts": "*",
   "EmailSettings": {
-    "From": "tahsintajware12345@gmail.com",
+    "From": "coursemate.official@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
-    "Username": "tahsintajware12345@gmail.com",
-    "Password": "ewpy hyip bmju fusn"
+    "Username": "coursemate.official@gmail.com",
+    "Password": "pgfk yokk nbzq rdir"
   }
 }
