--- a/CourseMate/appsettings.json
+++ b/CourseMate/appsettings.json
@@ -9,6 +9,10 @@
     "Default": "Host=dpg-d2k9rlm3jp1c7380k5l0-a.oregon-postgres.render.com;Port=5432;Database=coursemate_asp;Username=coursemate_asp_user;Password=d4bs4u3goNMe94gmb5xrppIspy3WR9Jo;SSL Mode=Require;Trust Server Certificate=true"
   },
 
+  "OpenAI": {
+    "ApiKey": "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"
+  },
+
   "AllowedHosts": "*",
   "EmailSettings": {
     "From": "coursemate.official@gmail.com",
